# ocaml_intrinsics

./: CHANGES.md  README.md  ocaml_intrinsics.opam
bench/: bench.ml  dune
src/: atomic.ml  atomic.mli  atomic_expert.ml  atomic_stubs.c  bigstring_intf.ml  conditional.ml  conditional_stubs.c  crc.ml  crc.mli  crc_stubs.c  dune  ext_pointer.h  ext_pointer.ml  ext_pointer.mli  ext_pointer_stubs.c  fences.ml  fences.mli  fences_stubs.c  float.ml  float.mli  float_stubs.c  int.ml  int32.ml  int64.ml  int64_stubs.c  int_stubs.c  native_pointer.ml  native_pointer.mli  native_pointer_stubs.c  nativeint.ml  ocaml_intrinsics.ml  perfmon.ml  perfmon.mli  perfmon_stubs.c  prefetch.ml  prefetch.mli  prefetch_expert.ml  prefetch_stubs.c
src/discover/: discover.ml  dune  ocaml_intrinsics_discover.ml
test/: dune  import.ml  ocaml_intrinsics_test.ml  qcheck.ml  test_atomic.ml  test_bmi2.ml  test_clz_u.ml  test_crc.ml  test_csel.ml  test_ctz_u.ml  test_ext_pointer.ml  test_float.ml  test_float_u.ml  test_mfence.ml  test_native_pointer.ml  test_perfmon.ml  test_popcnt.ml  test_prefetch.ml  test_stubs.c
