(library
 (foreign_stubs
  (language c)
  (names atomic_stubs int64_stubs perfmon_stubs crc_stubs ext_pointer_stubs
    native_pointer_stubs fences_stubs prefetch_stubs)
  (flags
   :standard
   (:include c_flags.sexp)))
 (name ocaml_intrinsics)
 (public_name ocaml_intrinsics)
 (libraries ocaml_intrinsics_kernel)
 (preprocess
  (pps ppx_builtin)))

(rule
 (targets c_flags.sexp)
 (action
  (run ./discover/ocaml_intrinsics_discover.exe %{targets})))
