(library
 (foreign_stubs
  (language c)
  (names test_stubs))
 (name ocaml_intrinsics_test)
 (preprocessor_deps config.h)
 (flags :standard -extension layouts)
 (libraries float_u int32_u int64_u nativeint_u ocaml_intrinsics
   base_bigstring core expect_test_helpers_core.expect_test_helpers_base
   expect_test_helpers_core int_repr ocaml_intrinsics_kernel_test stdio)
 (preprocess
  (pps ppx_jane ppx_optcomp ppx_template)))

(rule
 (targets config.h)
 (deps)
 (action
  (bash "cp %{lib:jst-config:config.h} .")))
